Fixed some css syntax consitency issues and worked on spacing

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ body {
   text-align: center;
 }
 
+@media (max-width: 460px) {
+  .main {
+    grid-template-columns: 1fr 5fr 1fr;
+  }
+}
+
 .nav-link {
   color: white;
   font-size: 1.5em;
@@ -65,13 +71,7 @@ body {
   width: 100%;
 }
 
-@media (max-width: 460px) {
-  .main {
-    grid-template-columns: 1fr 5fr 1fr;
-  }
-}
-
-.App-header {
+.app-header {
   font-size: 6em;
   grid-column: span 3;
   font-family: "Dancing Script", cursive;
@@ -86,7 +86,7 @@ h1 {
   font-family: "Dancing Script", cursive;
 }
 
-.mainContainer {
+.header-container {
   display: grid;
 }
 
@@ -97,7 +97,7 @@ h1 {
   font-family: "Dancing Script", cursive;
 }
 
-.mainPhoto {
+.main-photo {
   grid-column: span 3;
   height: 100%;
   width: 55%;
@@ -106,18 +106,18 @@ h1 {
 }
 
 @media (max-width: 600px) {
-  .mainPhoto {
+  .main-photo {
     width: 90%;
   }
 }
 @media (max-width: 450px) {
-  .mainPhoto {
+  .main-photo {
     width: 100%;
   }
 }
 
 @media (max-width: 412px) {
-  .mainPhoto {
+  .main-photo {
     width: 100%;
     height: 100%;
   }
@@ -153,14 +153,22 @@ h1 {
   color: white;
 }
 
-.weddingInfo {
+.wedding-info {
   color: white;
   padding: 5px;
   font-size: 15px;
 }
 
-.weddingDay {
+.wedding-day {
   font-family: "Dancing Script", cursive;
+}
+
+.photo-container {
+  display: grid;
+  row-gap: 20px;
+  grid-column: span 3;
+  justify-items: center;
+  align-items: center;
 }
 
 .photo-block-one {
@@ -170,16 +178,11 @@ h1 {
   width: 100%;
   grid-gap: 20px;
   grid-column: span 3;
-  margin-bottom: 200px;
 }
-@media (max-width: 1040px) {
-  .photo-block-one {
-    margin-top: 50px;
-  }
-}
+
 @media (max-width: 920px) {
   .photo-block-one {
-    margin-top: 20px;
+    /* margin-top: 20px; */
     grid-template-columns: 1fr 1fr;
   }
 }
@@ -221,7 +224,7 @@ h1 {
   }
 }
 
-.photoSubHeader {
+.photo-sub-header {
   grid-column: span 3;
   text-align: center;
   font-size: 4em;
@@ -237,12 +240,12 @@ h1 {
   justify-content: space-around;
 }
 
-.travelSpots {
+.travel-spots {
   display: grid;
   grid-column: span 3;
 }
 
-.hotelInfo {
+.hotel-info {
   display: grid;
   grid-column: span 3;
   grid-template-columns: 1fr;
@@ -251,18 +254,18 @@ h1 {
   justify-items: center;
 }
 
-.hotelPic {
+.hotel-pic {
   height: 100%;
   width: 100%;
   border-radius: 30%;
 }
 
-.picLink {
+.pic-link {
   height: 75%;
   width: 80%;
 }
 
-.travelHeader {
+.travel-header {
   font-size: 7em;
   font-family: "Dancing Script", cursive;
 }
@@ -272,12 +275,12 @@ h1 {
   font-family: "Dancing Script", cursive;
   font-weight: 900;
 }
-.eventInfo {
+.event-info {
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
-.eventInfo h2 {
+.event-info h2 {
   font-size: 2em;
 }
 
@@ -329,6 +332,7 @@ h1 {
   text-align: center;
   margin: 10px 0 10px 0;
   border-top: 5px solid white;
+  grid-column: span 3;
   color: white;
   background-color: rgb(45, 146, 121);
   float: left;
